<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">BinaryGame</string>
    <string name="hello_world">Hello world!</string>
    <string name="enter">Enter</string>
    <string name="countdown">%timer%</string>
    <string name="quest">%question%</string>
    <string name="go">Go</string>
    <string name="score">%score%</string>
    <string name="welcome">These are low quality games about binary. Just to de\' rustify my java</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_menu">Menu</string>
    <string name="title_activity_add">Add</string>
    <string name="questionadd">Add these two binary numbers</string>
    <string name="reset">Reset</string>
    <string name="title_activity_game">Game</string>
    <string name="Hs">High Score:  </string>
    <string name="Sc">Score:  </string>
    <string name="Conv">Convert this %s number to %s</string>
    <string name="bin">binary</string>
    <string name="den">denary</string>

    <string name="title_activity_td_game">TdGame</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
</resources>
