<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    tools:context=".front.Game">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/countdown"
        android:id="@+id/countdown"
        android:layout_alignParentTop="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_margin="16dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/questionadd"
        android:id="@+id/question"
        android:layout_above="@+id/question2"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="16dp" />


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/quest"
        android:id="@+id/question2"
        android:gravity="right"
        android:textAlignment="gravity"
        android:layout_above="@+id/answerbox"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="16dp" />

    <EditText
        android:id="@+id/answerbox"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:autofillHints="t"
        android:imeOptions="actionDone"
        android:inputType="number" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/enter"
        android:id="@+id/button"
        android:layout_below="@+id/answerbox"
        android:layout_centerHorizontal="true"
        android:layout_margin="16dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/score"
        android:id="@+id/score"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_margin="16dp" />

</RelativeLayout>
