<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    tools:context=".front.MainActivity">


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/welcome"
        android:id="@+id/textView"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_margin="16dp" />

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="fill_parent"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:id="@+id/relativeLayout"
        android:layout_alignRight="@+id/relativeLayout3"
        android:layout_alignEnd="@+id/relativeLayout3"
        android:layout_below="@+id/relativeLayout4">

        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_centerHorizontal="true"
            android:layout_above="@+id/goconvert"
            android:layout_below="@+id/textView3">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/score"
                android:id="@+id/highscoreconvert"
                android:layout_centerInParent="true" />

        </RelativeLayout>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/go"
            android:id="@+id/goconvert"
            android:layout_centerInParent="true" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="Converter game"
            android:id="@+id/textView3"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_margin="8dp" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/reset"
            android:id="@+id/resetconvert"
            android:layout_below="@+id/goconvert"
            android:layout_centerHorizontal="true"
            android:layout_margin="16dp" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="fill_parent"
        android:id="@+id/relativeLayout2"
        android:layout_alignParentEnd="true"
        android:layout_toRightOf="@+id/relativeLayout3"
        android:layout_toEndOf="@+id/relativeLayout3"
        android:layout_below="@+id/relativeLayout4"
        android:layout_alignParentRight="true">

        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_centerHorizontal="true"
            android:layout_above="@+id/goadd"
            android:layout_below="@+id/textView4">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/score"
                android:id="@+id/highscoreadd"
                android:layout_centerInParent="true" />

        </RelativeLayout>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/go"
            android:id="@+id/goadd"
            android:layout_centerInParent="true" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="Adder game"
            android:id="@+id/textView4"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_margin="8dp" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/reset"
            android:id="@+id/resetadd"
            android:layout_below="@+id/goadd"
            android:layout_centerHorizontal="true"
            android:layout_margin="16dp" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="0dp"
        android:layout_height="fill_parent"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:id="@+id/relativeLayout3" />

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="16dp"
        android:layout_below="@+id/textView"
        android:id="@+id/relativeLayout4"></RelativeLayout>

</RelativeLayout>
